1.5.5 (2010-03-26)
    * Included higher resolution icons for HDPI screens, looks nicer now.
    * Automated exception-reporting functionality.

1.5.3 (2010-02-23)
    * Show a warning before disabling Google Talk with respect to Market
      downloads.
    * Fixed display of component labels (a regression introduced in the
      1.5.0 backend refactor).
    * Improved way of using the root access; should work on more devices
      now, including the Archos devices and the Sholes Droid Mod.

1.5.0 (2010-02-10)
    * Major rewrite of how we retrieve package information. We no longer
      need to keep track of disabled components ourselves, and an uninstall
      of Autostarts no longer is an issue. The new backend also makes
      it possible for us to show additional events that are not in our
      database. Last but not least we can now show components that are
      disabled by default, and make a clean distinction between that
      initial state and changes by the user.
    * Compiled against 2.1 SDK.
    * Included pretty names and descriptions for a large number of new 
      events.

1.2.2 (2010-01-31)
    * Added German translation (does not include event texts).
    * Added support for two new events (SECRET_CODE, SPN_STRINGS_UPDATED).
    * Improved handling of certain events (like PACKAGE_INSTALLED and
      friends) that previously didn't properly show up in many cases.
      There is still some work to do here.
    * On first use and on the help screen we now show information about
      how to workaround the freeze bug in the Superuser Whitelist app.

1.2.1 (2009-10-29)
    * "Eclair-ready" (compiled against 2.0).
    * Support all screen sizes.
    * Support various new events introduced in 1.6 and 2.0.

1.2.0 (2009-10-17)
    * Fixed a pretty serious crash on almost every orientation change.
    * Added option to only show disabled components.

1.1.9 (2009-10-05)
    * Warn the user more clearly about the dangers of uninstalling the